# proposal_validator

./: CHANGELOG.md  Cargo.toml  README.md  canister_ids.json  dfx.json  proposal_validator.did
scripts/: build.sh
src/: lib.rs  validator_methods.rs
src/models/: sns_governance.rs
