[package]
name = "proposal_validator"
version = "0.1.0"
description = "Validator for SNS Governance Proposals"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path="src/lib.rs"


[dependencies]
candid = "0.10"
ic-cdk = "0.17"
serde = "1.0"
icrc-ledger-types = "0.1.8"
serde_json = "1.0"

toolkit-utils = {path = "../toolkit_utils"}
